--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,11 @@
   background-color: rgb(236, 253, 0);
   height: 150px;
   padding: 20px;
-  color: rgb(211, 23, 23)
+  color: rgb(211, 23, 23);
 }
 
 .Allans-Header {
-  background-color: rgb(29, 107, 223)
+  background-color: rgb(29, 107, 223);
 }
 
 .App-title {
@@ -21,4 +21,3 @@
 .App-intro {
   font-size: large;
 }
-
