--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,20 @@
+html,
 body {
+  font-size: 10px;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: #158cba;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+ul {
+  list-style: none;
 }
